# robot_idl

./: .gitmodules  CMakeLists.txt  package.xml  readme.md
msg/: AbvCommand.msg  AbvControllerStatus.msg  AbvGuidanceCommand.msg  AbvResponse.msg  AbvState.msg  AbvVec3.msg  ControllerStatus.msg  Enable.msg  FoundObjectResponse.msg  GpcGoal.msg  JointPositionWaypoint.msg  JointVelocityWaypoint.msg  ManipulationCommand.msg  ManipulatorState.msg  PlanCommand.msg  PlanResponse.msg  Quaternion.msg  RobotState.msg  TaskPositionWaypoint.msg  TaskVelocityWaypoint.msg  Vec3.msg  VehicleWaypoint.msg
scripts/: common.sh  config.sh  setup.sh  xy_plot_dot.py
src/robot_idl/: package.xml
